Fixes #137 - vertical alignment

--- a/frontend/components/Editor/Editor.scss
+++ b/frontend/components/Editor/Editor.scss
@@ -2,8 +2,7 @@
   font-weight: 400;
   font-size: 1em;
   line-height: 1.5em;
-  padding: 0 3em;
-  width: 50em;
+  width: 100%;
   color: #1b2631;
 
   h1,
